Allow "all" on map (unusable currently), updates #39
- Removes CARICOOS restriction as their registration was fixed a while ago
- Very much needs #31 to be friendlier

--- a/ioos_catalog/templates/asset_map.html
+++ b/ioos_catalog/templates/asset_map.html
@@ -76,7 +76,8 @@
 
   <div id="filters">
     <select name="filter-provider" class="form-control">
-      <option value="null">-</option>
+      <option value="-">-</option>
+      <option value="null">All</option>
       {% for region in regions %}
       <option>{{ region }}</option>
       {% endfor %}
@@ -171,9 +172,7 @@ function toggleInfo(did, sindex) {
 function setupFilters() {
   $('select[name^="filter"]').change(function() {
     var provVal = $('select[name="filter-provider"]').val();
-    if (provVal == "null") {
-      //window.location = "{{ url_for("asset_map") }}";
-      console.log("michael jackson's beat it");
+    if (provVal == "-") {
       return;
     }
     var url = '/map/geojson/';
