--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -70,7 +70,7 @@
 
 <div class="container">
   <div class="row">
-    <div id="#recent" class="col-lg-8">
+    <div id="recent" class="col-lg-8">
       <h3>Recent Updates</h3>
       <table class="table table-striped table-condensed">
         <thead>
@@ -81,21 +81,12 @@
           </tr>
         </thead>
         <tbody>
-        {%- for upd in (updates|sort(True, attribute='updated'))[:8] %}
-        <tr>
-          <td>
-            <a href="{{ upd.url }}">{{ upd.name }}</a><br />
-            <small>{{ upd.data_provider }} &middot; {{ upd.service_type }} &middot; {{ upd.update_type }}</small>
-          </td>
-          <td>{{ upd.updated | prettydate }}</td>
-        </tr>
-        {%- endfor %}
         </tbody>
       </table>
     </div>
 
     <div class="col-lg-4">
-      <div id="#overview">
+      <div id="overview">
         <h3>Service Overview</h3>
         <div>
           <ul class="list-group">
@@ -109,7 +100,7 @@
         </div>
       </div>
 
-      <div id="#assettypes">
+      <div id="assettypes">
         <h3>Dataset Overview</h3>
         <div>
           <ul class="list-group">
@@ -132,10 +123,6 @@
 <script type="text/javascript" src="{{ url_for('.static', filename='js/rickshaw.min.js') }}" /></script>
 
 <script type="text/javascript">
-
-var countsByProvider   = {{ counts_by_provider | tojson }};
-var datasetsByProvider = {{ dataset_counts_by_provider | tojson }};
-var updates            = {{ updates | tojson }};
 
 function updateTypeBtns() {
   var region = $('#region-select').val();
@@ -200,11 +187,54 @@ function updateTypeBtns() {
     var rtype = (region == "All") ? "null" : region;
     el.attr('href', '/datasets/filter/' + rtype + '/' + ltype);
   });
+}
 
+function updateRecentUpdates() {
+  // updates the update region with relevant terms
+  var region = $('#region-select').val();
+
+  // filter
+  var data = updates;
+  if (region != 'All') {
+    data = data.filter(function(v) {
+      return v.data_provider == region;
+    });
+  }
+
+  // sort (in place)
+  data.sort(function(a, b) {
+    return b.updated - a.updated;   // timestamps
+  });
+
+  // trim
+  data = data.slice(0, 10);
+
+  // select and update
+  var trs = d3.select('#recent').select('table').select('tbody').selectAll('tr')
+    .data(data, function(d) { return d.id });
+
+  trs.exit().remove();
+
+  var newtrs = trs.enter()
+    .append('tr');
+
+  var nametd = newtrs.append('td');
+  nametd.append('a')
+    .attr('href', function(d) { return d.url; })
+    .text(function(d) { return d.name || "(unnamed)"; });
+  nametd.append('br')
+  nametd.append('small')
+    .html(function(d) { return d.data_provider + ' &middot; ' + d.service_type + ' &middot; ' + d.update_type });
+
+  newtrs.append('td')
+    .text(function(d) { return d.updated_display });
+
+  trs.order();
 }
 
 $(function() {
   $('#region-select').on('change', updateTypeBtns);
+  $('#region-select').on('change', updateRecentUpdates);
   $('#region-select').change();
 });
 
@@ -264,7 +294,9 @@ queue()
 
   });
 
-
+var countsByProvider   = {{ counts_by_provider | tojson }};
+var datasetsByProvider = {{ dataset_counts_by_provider | tojson }};
+var updates            = {{ updates | tojson }};
 
 </script>
 
