Datasets on index page updating via d3 as well, updates #39
Unifies updates to single method!

--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -35,7 +35,7 @@ svg .dataset path {
 
 /* override some bootstrap colors/styles */
 
-.dataset-type-btn, .service-type-btn {
+.type-btn {
   margin-bottom: 10px;
 }
 
@@ -82,9 +82,6 @@ svg .dataset path {
 
 a {
   color: #567EBB;
-}
-
-.service-type-btn {
 }
 
 #pings {
