--- a/ioos_catalog/templates/services.html
+++ b/ioos_catalog/templates/services.html
@@ -101,8 +101,8 @@
     <script type="text/javascript">
       $(function() {
 
-        {% if 'data_provider' in filters %}
-          $('select[name="filter-provider"]').val('{{ filters['data_provider'] }}');
+        {% if 'data_provider' in filters and filters['data_provider']['$in']|length == 1 %}
+          $('select[name="filter-provider"]').val('{{ filters['data_provider']['$in'][0] }}');
         {% endif %}
 
         {% if 'service_type' in filters %}
